UI-2975: fix checkbox, radio on ie8

--- a/platform-ui-web-eXoResources/src/main/webapp/skin/less/Form/Style.less
+++ b/platform-ui-web-eXoResources/src/main/webapp/skin/less/Form/Style.less
@@ -167,16 +167,16 @@ input[disabled], select[disabled], textarea[disabled] {
 	background: #e6e6e6;
 }
 
-//hack ie8 and ie7
 
-.lt-ie9  .uiCheckbox input {
-	margin-left: -18px;
+.uiCheckbox input,.uiRadio input {
 	min-height: 10px;
+	padding: 0;
 }
 
 
 .lt-ie9  .uiCheckbox input[type="checkbox"] + span:before {	
-	background: transparent;
+	background: none;
+	display: none;
 }
 
 .uiRadio {
@@ -197,12 +197,6 @@ input[disabled], select[disabled], textarea[disabled] {
 	z-index: 100;
 } 
 
-//hack ie8 and ie7
-
-.lt-ie9 .uiRadio input {
-	margin-left: -8px ;
-	min-height: 10px;
-}
 
 .uiRadio > span {
 	display: inline-block;
@@ -240,11 +234,13 @@ input[disabled], select[disabled], textarea[disabled] {
 //hack ie8 and ie7
 
 .lt-ie9 .uiRadio input[type="radio"] + span:before {
-	background: transparent;
+	background: none;
+	display: none;
 } 
 
 .lt-ie9 .uiRadio input[type="radio"]:checked + span:after {	
-	background: transparent;
+	background: none;
+	display: none;
 }
 
 .uiRadio input[type="radio"] + span {
